--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-SECRET_KEY = 
+# Security
+JWT_SECRET= F2dN7x8HVzBWaQuEEDnhsvHXRWqAR63z
+
+# Configuration
+JWT_EXPIRES_SEC=86400
+BCRYPT_SALT_ROUNDS=12
+PORT = 8000
