--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "mongodb": "^6.5.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.4",
     "nodemon": "^3.0.1",
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
     "validator": "^13.11.0"
   }
 }
